Добавил запрос на получение истории по счету
