# src/main/java/ru/hits/trb/trbcore/entity/enumeration/TransactionCode.java
@@ -1,15 +1,6 @@
 package ru.hits.trb.trbcore.entity.enumeration;
 
-import lombok.Getter;
-
-@Getter
 public enum TransactionCode {
-    SUCCESS(0),
-    NOT_ENOUGH_MONEY(1);
-
-    private final int dbCode;
-
-    TransactionCode(int dbCode) {
-        this.dbCode = dbCode;
-    }
+    SUCCESS,
+    NOT_ENOUGH_MONEY
 }
